--- a/public/index.css
+++ b/public/index.css
@@ -48,6 +48,22 @@
 		margin-bottom: 20px;
 	}
 
+	.flag-wrapper {
+		cursor: pointer;
+		width: 54px;
+		height: 36px;
+		position: absolute;
+		right: -3px;
+		top: 20px;
+		border: 3px solid white;
+		border-radius: 4px;
+	}
+
+	.flag-wrapper img {
+		width: 100%;
+		height: 100%;
+	}	
+
 	#card-form1 {
 		background-color: rgba(255,255,255,0.9);
 		padding: 0px;
