--- a/src/App.css
+++ b/src/App.css
@@ -72,19 +72,34 @@
 
   .flag-wrapper {
     cursor: pointer;
-    width: 54px;
-    height: 36px;
+    width: 105px;
+    height: 48px;
     position: absolute;
     right: -3px;
     top: 20px;
     border: 3px solid white;
-    border-radius: 4px;
+    background-color: white;
+    border-radius: 2px;
   }
 
-  .flag-wrapper img {
-    width: 100%;
-    height: 100%;
+  .flags-with-desc {
+    display: inline-block;
+    width: 43px;
+    height: 29px;
   } 
+
+  .flags-with-desc img {
+    width: 100%;
+  }
+
+  .flag-desc {
+    margin-top: -5px;
+    font-size: 11px;
+  }
+
+  .flag-selected {
+    border-bottom: 3px solid #174274;
+  }
 
   #card-form1 {
     background-color: rgba(255,255,255,0.9);
@@ -288,16 +303,14 @@
       margin-left: 20px;
     }     
     .flag-wrapper {
-      top: 5px;
-      width: 25px;
-      height: 19px;
-      border: 1px solid white;
-      border-radius: 0px;
+      transform: scale(0.6);
+      top: -10px;
+      right: -20px;
     }
 
-    .flag-wrapper img {
-      position: absolute;
-      right: 0px;
+    #mainlogo {
+      margin-top: 10px;
+      width: 250px;
     }
   }
   .frasedestaque {
