--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@
     border-bottom: 3px solid #174274;
   }
 
-  #card-form1 {
+  #claim-form {
     background-color: rgba(255,255,255,0.9);
     padding: 0px;
     padding-bottom: 25px;
@@ -218,7 +218,7 @@
     background-position: 0% 70%;
     animation-timing-function: linear;
     animation-name: clouds;
-    animation-duration: 20s;
+    animation-duration: 10s;
     animation-iteration-count: infinite;    
   }
 
@@ -250,6 +250,7 @@
     }
     #about {
       background-position: 40% 90%;
+      animation-duration: 60s;
     }
   }
 
@@ -315,4 +316,18 @@
   }
   .frasedestaque {
     font-weight: bolder;
+  }
+
+  .feature-title {
+    background-color: rgba(23, 66, 116, 0.7);
+    color: white;
+    padding: 5px;
+    font-weight: bold;
+    margin-right: 10px;
+    text-transform: uppercase;
+    /*
+    width: 110px;
+    display: inline-block;
+    text-align: center;
+    */
   }
