--- a/src/App.css
+++ b/src/App.css
@@ -307,13 +307,25 @@
     font-weight: bolder;
   }
 
+  .features {
+    text-align: left;
+    text-justify: inter-word;  
+  }
+
+  .feature-title::before {
+    content: '✈';
+    margin-right: 5px;
+    opacity: 0.9;
+  }
   .feature-title {
+    /*
     background-color: rgba(23, 66, 116, 0.7);
     color: white;
+    */
     padding: 5px;
     font-weight: bold;
-    margin-right: 10px;
-    text-transform: uppercase;
+    margin-right: 5px;
+    text-transform: uppercase;     
     /*
     width: 110px;
     display: inline-block;
