--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,11 @@
     background-color: rgba(255,255,255,0.9);
     padding: 0px;
     padding-bottom: 25px;
+    margin-top: -20px;
+  }
+
+  .claimbox-wrapper #claim-form {
+    margin-top: 20px;
   }
 
   .card-panel .titulo {
