--- a/src/App.css
+++ b/src/App.css
@@ -363,6 +363,20 @@
     text-shadow: 0px 0px 2px rgba(0,0,0,0.3);
   }
 
+  .soc-whatsapp {
+    background-image: url(/wpp.png);
+    background-size: 65%;
+    background-repeat: no-repeat;
+    background-position: 50%;
+  }
+
+  .soc-website {
+    background-image: url(/www.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: 50%;
+  }  
+
   @media screen and (max-width: 992px) {
     #about-picture {
       margin-top: 20px;
