--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,10 @@
     margin-top: 20px;
   }
 
+  .embedded .input-field {
+    margin-bottom: 0px;
+  }
+
   .card-panel .titulo {
     font-size: 150%;
       font-weight: bold;
